--- a/auth/login.html
+++ b/auth/login.html
@@ -9,9 +9,9 @@
   crossorigin="anonymous"
 ></script>
 <script src="../api/index.js"></script>
-<link rel="stylesheet" href="./register/assets/css/main.css" />
-<link rel="stylesheet" href="./register/assets/css/base.css" />
-<link rel="stylesheet" href="./register/assets/css/responsive.css" />
+<link rel="stylesheet" href="./login/asset/css/extra.css" />
+<link rel="stylesheet" href="./login/asset/css/base.css" />
+<link rel="stylesheet" href="./login/asset/css/resposive.css" />
 <body>
   <div id="register">
     <div class="row">
@@ -24,7 +24,7 @@
               <!-- title -->
               <div class="container-content">
                 <div class="login-up__text">
-                  <h1>Food</h1>
+                  <h1>FOOD</h1>
                   <p>Sign Into Your Account</p>
                 </div>
 
@@ -39,6 +39,7 @@
                       class="form-control login-email"
                       placeholder="Email"
                     />
+                    
                   </div>
                   <!-- Password  -->
                   <h6>Password</h6>
@@ -81,7 +82,6 @@
                         <span>Facebook</span>
                       </a>
                     </div>
-
                     <div class="twitter">
                       <i class="twitter-icon fa-brands fa-twitter"></i>
                       <a href="" class="Twitter--btn">
