--- a/auth/login.html
+++ b/auth/login.html
@@ -12,7 +12,11 @@
 <link rel="stylesheet" href="./login/asset/css/extra.css" />
 <link rel="stylesheet" href="./login/asset/css/base.css" />
 <link rel="stylesheet" href="./login/asset/css/resposive.css" />
+<link rel="stylesheet" href="../api/index.js">
+<link rel="stylesheet" href="../access/header/css/Main.css">
 <body>
+  <!--toast-->
+  <div id="toast"></div>
   <div id="register">
     <div class="row">
       <div class="col-5">
