--- a/auth/register.html
+++ b/auth/register.html
@@ -1,4 +1,5 @@
 <script
+  src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.0/axios.min.js"
   src="https://kit.fontawesome.com/e1e4658b74.js"
   crossorigin="anonymous"
 ></script>
@@ -6,7 +7,11 @@
 <link rel="stylesheet" href="./register/assets/css/main.css" />
 <link rel="stylesheet" href="./register/assets/css/base.css" />
 <link rel="stylesheet" href="./register/assets/css/responsive.css" />
+<link rel="stylesheet" href="../access/header/css/Main.css">
+<script src="../api/index.js"></script>
 <body>
+  <!--toast-->
+  <div id="toast"></div>
   <div id="register">
     <div class="row">
       <div class="col-5">
